# cppgo

./: .gitignore  CMakeLists.txt  Makefile  README.md
cppgo/: main.cpp
cppgo/core/: board.hpp  board.test.cpp  color.hpp  engine.hpp  exception.hpp  game.hpp  game.test.cpp  move.hpp  piece.hpp  position.hpp
cppgo/ogs/: https_client.hpp  ogs_client.hpp  ogs_cppgo.cpp
tests/core/: board.test.cpp  game.test.cpp
